--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <p>Dit is een <b>P</b> tag.</p>
           <br />
           <p>Dit is een <b>P</b> tag met een <b>' br/ '</b> ertussen.</p>
-          <p>Hieronder een tabel met de <b>table, tr en td tag.</b></p>
+         <p>Hieronder esdfdsfasen tabel met de <b>table, tr en td tag.</b></p>
           <table style="width: 20%; border-collapse: collapse;"  border="1" cellpadding="20">
             <tbody>
               <tr>
